--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -38,7 +38,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-11-07 17:33:40
+// updated on 2017-11-15 18:51:55
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -85,7 +85,6 @@ DOMAIN-SUFFIX,mobilemsg.youku.com,REJECT
 DOMAIN-SUFFIX,msg.youku.com,REJECT
 DOMAIN-SUFFIX,myes.youku.com,REJECT
 DOMAIN-SUFFIX,p.l.youku.com,REJECT
-DOMAIN-SUFFIX,pl.youku.com,REJECT
 DOMAIN-SUFFIX,passport-log.youku.com,REJECT
 DOMAIN-SUFFIX,p-log.ykimg.com,REJECT
 DOMAIN-SUFFIX,push.m.youku.com,REJECT
@@ -1615,6 +1614,7 @@ DOMAIN-SUFFIX,appdriver.cn,REJECT
 DOMAIN-SUFFIX,apple.www.letv.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
 DOMAIN-SUFFIX,app-measurement.com,REJECT
+DOMAIN-SUFFIX,appservices.comcsoft.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,aqgyju.cn,REJECT
 DOMAIN-SUFFIX,aralego.com,REJECT
@@ -2740,7 +2740,6 @@ DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
 DOMAIN-SUFFIX,mixpanel.com,REJECT
 DOMAIN-SUFFIX,mm.anqu.com,REJECT
 DOMAIN-SUFFIX,mmcc.yxlady.com,REJECT
-DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,mng-ads.com,REJECT
 DOMAIN-SUFFIX,mnkan.com,REJECT
 DOMAIN-SUFFIX,mnwan.com,REJECT
@@ -3724,7 +3723,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-11-07 17:33:39
+// updated on 2017-11-15 18:51:53
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -4166,6 +4165,7 @@ DOMAIN-SUFFIX,android.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,androidify.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,api.ai,Proxy,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,autodraw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogspot.com,Proxy,force-remote-dns
@@ -4191,6 +4191,7 @@ DOMAIN-SUFFIX,domains.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,duck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,environment.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,feedburner.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,firebaseio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,g.co,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gcr.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,get.how,Proxy,force-remote-dns
@@ -4454,6 +4455,7 @@ DOMAIN-SUFFIX,21andy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,21pron.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,21sextury.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,228.net.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,233abc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,24hrs.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,24smile.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,2lipstube.com,Proxy,force-remote-dns
@@ -4504,6 +4506,7 @@ DOMAIN-SUFFIX,8z1.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,9001700.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,908taiwan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,91porn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,91vps.club,Proxy,force-remote-dns
 DOMAIN-SUFFIX,92ccav.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,991.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,99btgc01.com,Proxy,force-remote-dns
@@ -4786,8 +4789,8 @@ DOMAIN-SUFFIX,bigfools.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bigjapanesesex.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bignews.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bigsound.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,biliworld.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,billypan.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,billywr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,binux.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ai.binwang.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bipic.net,Proxy,force-remote-dns
@@ -4977,6 +4980,7 @@ DOMAIN-SUFFIX,cdcparty.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdef.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdig.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdjp.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdn-apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdnews.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdp1989.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdp1998.org,Proxy,force-remote-dns
@@ -5763,6 +5767,7 @@ DOMAIN-SUFFIX,gatherproxy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gati.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gaybubble.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gaycn.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gayhub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gaymap.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gaytube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,images-gaytube.com,Proxy,force-remote-dns
@@ -5962,6 +5967,7 @@ DOMAIN-SUFFIX,vn.hao123.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hk.hao123img.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ld.hao123img.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,happy-vpn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,haproxy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hardsextube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,harunyahya.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hasaowall.com,Proxy,force-remote-dns
@@ -6200,6 +6206,7 @@ DOMAIN-SUFFIX,ift.tt,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ifreewares.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igcd.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igfw.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,igfw.tech,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igmg.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ignitedetroit.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igotmail.com.tw,Proxy,force-remote-dns
@@ -6519,6 +6526,7 @@ DOMAIN-SUFFIX,blog.lester850.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lesoir.be,Proxy,force-remote-dns
 DOMAIN-SUFFIX,letou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,letscorp.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ss.levyhsu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdn.assets.lfpcontent.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lhakar.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lhasocialwork.org,Proxy,force-remote-dns
@@ -6661,6 +6669,7 @@ DOMAIN-SUFFIX,medium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meetav.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meetup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mefeedia.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,jihadintel.meforum.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mega.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,megaproxy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,megarotic.com,Proxy,force-remote-dns
@@ -6731,6 +6740,7 @@ DOMAIN-SUFFIX,minzhuzhanxian.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,minzhuzhongguo.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,miroguide.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mirrorbooks.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mist.vip,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thecenter.mit.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mitao.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mitbbs.com,Proxy,force-remote-dns
@@ -7282,7 +7292,6 @@ DOMAIN-SUFFIX,proxifier.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,api.proxlet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxomitron.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxpn.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,proxy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxylist.org.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxypy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxyroad.com,Proxy,force-remote-dns
@@ -7414,7 +7423,7 @@ DOMAIN-SUFFIX,rlwlw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rmjdw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rmjdw132.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,roadshow.hk,Proxy,force-remote-dns
-DOMAIN-SUFFIX,robtex.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,roboforex.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,robustnessiskey.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,roc-taiwan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rocket-inc.net,Proxy,force-remote-dns
@@ -7723,6 +7732,7 @@ DOMAIN-SUFFIX,statueofdemocracy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starfishfx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starp2p.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,startpage.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,startuplivingchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,static-economist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stc.com.sa,Proxy,force-remote-dns
 DOMAIN-SUFFIX,steamcommunity.com,Proxy,force-remote-dns
@@ -7745,6 +7755,7 @@ DOMAIN-SUFFIX,storify.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stormmediagroup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stoweboyd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stranabg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,straplessdildo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,streamingthe.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,streema.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.streetvoice.com,Proxy,force-remote-dns
@@ -7858,6 +7869,7 @@ DOMAIN-SUFFIX,tccwonline.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tcewf.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tchrd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tcnynj.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tcpspeed.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tcsofbc.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tcsovi.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,teamamericany.com,Proxy,force-remote-dns
@@ -8378,6 +8390,7 @@ DOMAIN-SUFFIX,vivthomas.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vjmedia.com.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vllcs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vmixcore.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vnet.link,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.voa.mobi,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tw.voa.mobi,Proxy,force-remote-dns
 DOMAIN-SUFFIX,voachineseblog.com,Proxy,force-remote-dns
@@ -8444,6 +8457,7 @@ DOMAIN-SUFFIX,waigaobu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waikeung.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wailaike.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waiwaier.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wallmama.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wallornot.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wallpapercasa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wallproxy.com,Proxy,force-remote-dns
@@ -8675,6 +8689,7 @@ DOMAIN-SUFFIX,xuchao.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xvideo.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xvideos.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xvideos.es,Proxy,force-remote-dns
+DOMAIN-SUFFIX,xkiwi.tk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xxbbx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xxlmovies.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xxx.com,Proxy,force-remote-dns
