--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -29,7 +29,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-11-07 17:33:40
+// updated on 2017-11-15 18:51:55
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -76,7 +76,6 @@ DOMAIN-SUFFIX,mobilemsg.youku.com,REJECT
 DOMAIN-SUFFIX,msg.youku.com,REJECT
 DOMAIN-SUFFIX,myes.youku.com,REJECT
 DOMAIN-SUFFIX,p.l.youku.com,REJECT
-DOMAIN-SUFFIX,pl.youku.com,REJECT
 DOMAIN-SUFFIX,passport-log.youku.com,REJECT
 DOMAIN-SUFFIX,p-log.ykimg.com,REJECT
 DOMAIN-SUFFIX,push.m.youku.com,REJECT
@@ -1606,6 +1605,7 @@ DOMAIN-SUFFIX,appdriver.cn,REJECT
 DOMAIN-SUFFIX,apple.www.letv.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
 DOMAIN-SUFFIX,app-measurement.com,REJECT
+DOMAIN-SUFFIX,appservices.comcsoft.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,aqgyju.cn,REJECT
 DOMAIN-SUFFIX,aralego.com,REJECT
@@ -2731,7 +2731,6 @@ DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
 DOMAIN-SUFFIX,mixpanel.com,REJECT
 DOMAIN-SUFFIX,mm.anqu.com,REJECT
 DOMAIN-SUFFIX,mmcc.yxlady.com,REJECT
-DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,mng-ads.com,REJECT
 DOMAIN-SUFFIX,mnkan.com,REJECT
 DOMAIN-SUFFIX,mnwan.com,REJECT
@@ -3716,7 +3715,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-11-07 17:33:44
+// updated on 2017-11-15 18:52:05
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -3746,6 +3745,7 @@ DOMAIN-SUFFIX,002dh.com,ChinaProxy
 DOMAIN-SUFFIX,0033.com,ChinaProxy
 DOMAIN-SUFFIX,003593.com,ChinaProxy
 DOMAIN-SUFFIX,00394.net,ChinaProxy
+DOMAIN-SUFFIX,003store.com,ChinaProxy
 DOMAIN-SUFFIX,005.tv,ChinaProxy
 DOMAIN-SUFFIX,00544.com,ChinaProxy
 DOMAIN-SUFFIX,0056.cc,ChinaProxy
@@ -4670,6 +4670,7 @@ DOMAIN-SUFFIX,1234n.com,ChinaProxy
 DOMAIN-SUFFIX,1234wu.com,ChinaProxy
 DOMAIN-SUFFIX,1234ye.com,ChinaProxy
 DOMAIN-SUFFIX,12365auto.com,ChinaProxy
+DOMAIN-SUFFIX,12365chia.com,ChinaProxy
 DOMAIN-SUFFIX,12366cn.com,ChinaProxy
 DOMAIN-SUFFIX,1238g.com,ChinaProxy
 DOMAIN-SUFFIX,123baofeng.com,ChinaProxy
@@ -6214,6 +6215,7 @@ DOMAIN-SUFFIX,369xxw.com,ChinaProxy
 DOMAIN-SUFFIX,369yizhi.com,ChinaProxy
 DOMAIN-SUFFIX,36aw.com,ChinaProxy
 DOMAIN-SUFFIX,36dsj.com,ChinaProxy
+DOMAIN-SUFFIX,36fy.com,ChinaProxy
 DOMAIN-SUFFIX,36hjob.com,ChinaProxy
 DOMAIN-SUFFIX,36ic.com,ChinaProxy
 DOMAIN-SUFFIX,36jr.com,ChinaProxy
@@ -6414,6 +6416,7 @@ DOMAIN-SUFFIX,3j4.com,ChinaProxy
 DOMAIN-SUFFIX,3jrx.com,ChinaProxy
 DOMAIN-SUFFIX,3jxs.com,ChinaProxy
 DOMAIN-SUFFIX,3jy.com,ChinaProxy
+DOMAIN-SUFFIX,3ke.cc,ChinaProxy
 DOMAIN-SUFFIX,3kfw.com,ChinaProxy
 DOMAIN-SUFFIX,3kid.com,ChinaProxy
 DOMAIN-SUFFIX,3kjj.com,ChinaProxy
@@ -6611,6 +6614,7 @@ DOMAIN-SUFFIX,4779.com,ChinaProxy
 DOMAIN-SUFFIX,47jh.com,ChinaProxy
 DOMAIN-SUFFIX,47yun.com,ChinaProxy
 DOMAIN-SUFFIX,47zu.com,ChinaProxy
+DOMAIN-SUFFIX,4832880.com,ChinaProxy
 DOMAIN-SUFFIX,4846.com,ChinaProxy
 DOMAIN-SUFFIX,488u.com,ChinaProxy
 DOMAIN-SUFFIX,48905.com,ChinaProxy
@@ -6731,6 +6735,7 @@ DOMAIN-SUFFIX,5120bb.com,ChinaProxy
 DOMAIN-SUFFIX,512301.com,ChinaProxy
 DOMAIN-SUFFIX,5123cn.com,ChinaProxy
 DOMAIN-SUFFIX,51240.com,ChinaProxy
+DOMAIN-SUFFIX,5125129.com,ChinaProxy
 DOMAIN-SUFFIX,512514.com,ChinaProxy
 DOMAIN-SUFFIX,512876.com,ChinaProxy
 DOMAIN-SUFFIX,512play.com,ChinaProxy
@@ -7632,6 +7637,7 @@ DOMAIN-SUFFIX,591yhw.com,ChinaProxy
 DOMAIN-SUFFIX,5925car.com,ChinaProxy
 DOMAIN-SUFFIX,592ht.com,ChinaProxy
 DOMAIN-SUFFIX,592kx.com,ChinaProxy
+DOMAIN-SUFFIX,592sf.com,ChinaProxy
 DOMAIN-SUFFIX,592sifu.com,ChinaProxy
 DOMAIN-SUFFIX,592wg.cc,ChinaProxy
 DOMAIN-SUFFIX,592xyx.com,ChinaProxy
@@ -8518,6 +8524,7 @@ DOMAIN-SUFFIX,7vps.net,ChinaProxy
 DOMAIN-SUFFIX,7wa.cc,ChinaProxy
 DOMAIN-SUFFIX,7weibo.com,ChinaProxy
 DOMAIN-SUFFIX,7wenta.com,ChinaProxy
+DOMAIN-SUFFIX,7wo8.com,ChinaProxy
 DOMAIN-SUFFIX,7wsh.com,ChinaProxy
 DOMAIN-SUFFIX,7x24s.com,ChinaProxy
 DOMAIN-SUFFIX,7xdown.com,ChinaProxy
@@ -9119,6 +9126,7 @@ DOMAIN-SUFFIX,92gzc.com,ChinaProxy
 DOMAIN-SUFFIX,92hidc.net,ChinaProxy
 DOMAIN-SUFFIX,92jn.com,ChinaProxy
 DOMAIN-SUFFIX,92lm.com,ChinaProxy
+DOMAIN-SUFFIX,92lucky.com,ChinaProxy
 DOMAIN-SUFFIX,92np.com,ChinaProxy
 DOMAIN-SUFFIX,92sucai.com,ChinaProxy
 DOMAIN-SUFFIX,92to.com,ChinaProxy
@@ -9190,6 +9198,7 @@ DOMAIN-SUFFIX,94fzb.com,ChinaProxy
 DOMAIN-SUFFIX,94hd.com,ChinaProxy
 DOMAIN-SUFFIX,94hnr.com,ChinaProxy
 DOMAIN-SUFFIX,94i5.com,ChinaProxy
+DOMAIN-SUFFIX,94php.com,ChinaProxy
 DOMAIN-SUFFIX,94te.com,ChinaProxy
 DOMAIN-SUFFIX,94uv.com,ChinaProxy
 DOMAIN-SUFFIX,94yiren.com,ChinaProxy
@@ -11231,6 +11240,7 @@ DOMAIN-SUFFIX,bajiu.org,ChinaProxy
 DOMAIN-SUFFIX,bajiuqier.com,ChinaProxy
 DOMAIN-SUFFIX,bakuaikuai.com,ChinaProxy
 DOMAIN-SUFFIX,balacha.com,ChinaProxy
+DOMAIN-SUFFIX,baldc.com,ChinaProxy
 DOMAIN-SUFFIX,balifiles.com,ChinaProxy
 DOMAIN-SUFFIX,balijieji.com,ChinaProxy
 DOMAIN-SUFFIX,ball114.com,ChinaProxy
@@ -11697,7 +11707,9 @@ DOMAIN-SUFFIX,bftv.com,ChinaProxy
 DOMAIN-SUFFIX,bfw.cc,ChinaProxy
 DOMAIN-SUFFIX,bfyx.com,ChinaProxy
 DOMAIN-SUFFIX,bfyx.net,ChinaProxy
+DOMAIN-SUFFIX,bg.v4,ChinaProxy
 DOMAIN-SUFFIX,bg397.com,ChinaProxy
+DOMAIN-SUFFIX,bg4.v4,ChinaProxy
 DOMAIN-SUFFIX,bgbk.org,ChinaProxy
 DOMAIN-SUFFIX,bgdeco.com,ChinaProxy
 DOMAIN-SUFFIX,bgfans.net,ChinaProxy
@@ -11813,6 +11825,7 @@ DOMAIN-SUFFIX,biligame.net,ChinaProxy
 DOMAIN-SUFFIX,bilin.net,ChinaProxy
 DOMAIN-SUFFIX,bilinstar.com,ChinaProxy
 DOMAIN-SUFFIX,biliplus.com,ChinaProxy
+DOMAIN-SUFFIX,billionconnect.com,ChinaProxy
 DOMAIN-SUFFIX,billwang.net,ChinaProxy
 DOMAIN-SUFFIX,biluoting.com,ChinaProxy
 DOMAIN-SUFFIX,bim99.org,ChinaProxy
@@ -15805,6 +15818,7 @@ DOMAIN-SUFFIX,d2shost.com,ChinaProxy
 DOMAIN-SUFFIX,d3cn.net,ChinaProxy
 DOMAIN-SUFFIX,d3dweb.com,ChinaProxy
 DOMAIN-SUFFIX,d3f.com,ChinaProxy
+DOMAIN-SUFFIX,d3iz9md.com,ChinaProxy
 DOMAIN-SUFFIX,d3skg.com,ChinaProxy
 DOMAIN-SUFFIX,d3zone.com,ChinaProxy
 DOMAIN-SUFFIX,d4000.com,ChinaProxy
@@ -16697,6 +16711,7 @@ DOMAIN-SUFFIX,dj970.com,ChinaProxy
 DOMAIN-SUFFIX,djbh.net,ChinaProxy
 DOMAIN-SUFFIX,djbstatic.com,ChinaProxy
 DOMAIN-SUFFIX,djcb71.com,ChinaProxy
+DOMAIN-SUFFIX,djcp099.com,ChinaProxy
 DOMAIN-SUFFIX,djdkk.com,ChinaProxy
 DOMAIN-SUFFIX,djfansub.com,ChinaProxy
 DOMAIN-SUFFIX,djhuo.com,ChinaProxy
@@ -16742,6 +16757,7 @@ DOMAIN-SUFFIX,dlbljy.com,ChinaProxy
 DOMAIN-SUFFIX,dlbtn.com,ChinaProxy
 DOMAIN-SUFFIX,dlcaic.com,ChinaProxy
 DOMAIN-SUFFIX,dlchanghai.com,ChinaProxy
+DOMAIN-SUFFIX,dlcysj.com,ChinaProxy
 DOMAIN-SUFFIX,dld.com,ChinaProxy
 DOMAIN-SUFFIX,dldcdn.com,ChinaProxy
 DOMAIN-SUFFIX,dldk8.com,ChinaProxy
@@ -17039,6 +17055,7 @@ DOMAIN-SUFFIX,doubaojf.com,ChinaProxy
 DOMAIN-SUFFIX,doubean.com,ChinaProxy
 DOMAIN-SUFFIX,doubleclick.net,ChinaProxy
 DOMAIN-SUFFIX,doubleliu.com,ChinaProxy
+DOMAIN-SUFFIX,doubozhibo.com,ChinaProxy
 DOMAIN-SUFFIX,doudang.com,ChinaProxy
 DOMAIN-SUFFIX,doudier.com,ChinaProxy
 DOMAIN-SUFFIX,doudou.in,ChinaProxy
@@ -17975,6 +17992,7 @@ DOMAIN-SUFFIX,emao.net,ChinaProxy
 DOMAIN-SUFFIX,emarbox.com,ChinaProxy
 DOMAIN-SUFFIX,embedhq.org,ChinaProxy
 DOMAIN-SUFFIX,embedu.org,ChinaProxy
+DOMAIN-SUFFIX,emdl.ws,ChinaProxy
 DOMAIN-SUFFIX,eme2000.com,ChinaProxy
 DOMAIN-SUFFIX,emindos.org,ChinaProxy
 DOMAIN-SUFFIX,emiqu.com,ChinaProxy
@@ -18098,6 +18116,7 @@ DOMAIN-SUFFIX,erdianzhang.com,ChinaProxy
 DOMAIN-SUFFIX,erdosrcb.com,ChinaProxy
 DOMAIN-SUFFIX,erdsrsrc.com,ChinaProxy
 DOMAIN-SUFFIX,erer.in,ChinaProxy
+DOMAIN-SUFFIX,ereuiib.com,ChinaProxy
 DOMAIN-SUFFIX,erg2008.com,ChinaProxy
 DOMAIN-SUFFIX,erhaojie.com,ChinaProxy
 DOMAIN-SUFFIX,erichfund.com,ChinaProxy
@@ -18909,6 +18928,7 @@ DOMAIN-SUFFIX,fjzixun.com,ChinaProxy
 DOMAIN-SUFFIX,fjzol.com,ChinaProxy
 DOMAIN-SUFFIX,fjzzled.com,ChinaProxy
 DOMAIN-SUFFIX,fkcaijing.com,ChinaProxy
+DOMAIN-SUFFIX,fkku194.com,ChinaProxy
 DOMAIN-SUFFIX,fktong.com,ChinaProxy
 DOMAIN-SUFFIX,fkw100.com,ChinaProxy
 DOMAIN-SUFFIX,fkweber.com,ChinaProxy
@@ -19201,6 +19221,7 @@ DOMAIN-SUFFIX,fujianlaser.com,ChinaProxy
 DOMAIN-SUFFIX,fujianrc.com,ChinaProxy
 DOMAIN-SUFFIX,fujunjie.com,ChinaProxy
 DOMAIN-SUFFIX,fuk11.com,ChinaProxy
+DOMAIN-SUFFIX,fuleu.net,ChinaProxy
 DOMAIN-SUFFIX,fuli1024.com,ChinaProxy
 DOMAIN-SUFFIX,fuliao.com,ChinaProxy
 DOMAIN-SUFFIX,fuliba.mobi,ChinaProxy
@@ -19536,6 +19557,7 @@ DOMAIN-SUFFIX,gaodabio.com,ChinaProxy
 DOMAIN-SUFFIX,gaode.com,ChinaProxy
 DOMAIN-SUFFIX,gaodilicai.com,ChinaProxy
 DOMAIN-SUFFIX,gaodun.com,ChinaProxy
+DOMAIN-SUFFIX,gaofeie.com,ChinaProxy
 DOMAIN-SUFFIX,gaofen.com,ChinaProxy
 DOMAIN-SUFFIX,gaogulou.com,ChinaProxy
 DOMAIN-SUFFIX,gaohr.com,ChinaProxy
@@ -20280,6 +20302,7 @@ DOMAIN-SUFFIX,guaiguai.com,ChinaProxy
 DOMAIN-SUFFIX,guaiguaitoo.com,ChinaProxy
 DOMAIN-SUFFIX,guaihaha.com,ChinaProxy
 DOMAIN-SUFFIX,guailuo.com,ChinaProxy
+DOMAIN-SUFFIX,guainiuwang.com,ChinaProxy
 DOMAIN-SUFFIX,guaiwei.com,ChinaProxy
 DOMAIN-SUFFIX,guaixun.com,ChinaProxy
 DOMAIN-SUFFIX,guan5.com,ChinaProxy
@@ -20351,6 +20374,7 @@ DOMAIN-SUFFIX,gui66.com,ChinaProxy
 DOMAIN-SUFFIX,guichuideng.org,ChinaProxy
 DOMAIN-SUFFIX,guidaye.com,ChinaProxy
 DOMAIN-SUFFIX,guidechem.com,ChinaProxy
+DOMAIN-SUFFIX,guiderank.org,ChinaProxy
 DOMAIN-SUFFIX,guigu.org,ChinaProxy
 DOMAIN-SUFFIX,guiguzhongguo.com,ChinaProxy
 DOMAIN-SUFFIX,guiji.com,ChinaProxy
@@ -20621,6 +20645,7 @@ DOMAIN-SUFFIX,h4.cc,ChinaProxy
 DOMAIN-SUFFIX,legend.com,ChinaProxy
 DOMAIN-SUFFIX,share.com,ChinaProxy
 DOMAIN-SUFFIX,h515.net,ChinaProxy
+DOMAIN-SUFFIX,h5151.com,ChinaProxy
 DOMAIN-SUFFIX,h5abc.com,ChinaProxy
 DOMAIN-SUFFIX,h5avu.com,ChinaProxy
 DOMAIN-SUFFIX,h5data.com,ChinaProxy
@@ -22234,6 +22259,7 @@ DOMAIN-SUFFIX,huilx.com,ChinaProxy
 DOMAIN-SUFFIX,huim.com,ChinaProxy
 DOMAIN-SUFFIX,huimaiche.com,ChinaProxy
 DOMAIN-SUFFIX,huimee.com,ChinaProxy
+DOMAIN-SUFFIX,huimee.net,ChinaProxy
 DOMAIN-SUFFIX,huing.net,ChinaProxy
 DOMAIN-SUFFIX,huioo.net,ChinaProxy
 DOMAIN-SUFFIX,huipinzhe.com,ChinaProxy
@@ -23781,6 +23807,7 @@ DOMAIN-SUFFIX,izhangchu.com,ChinaProxy
 DOMAIN-SUFFIX,izhaowo.com,ChinaProxy
 DOMAIN-SUFFIX,izhenxin.com,ChinaProxy
 DOMAIN-SUFFIX,izhequ.com,ChinaProxy
+DOMAIN-SUFFIX,izhihuicheng.net,ChinaProxy
 DOMAIN-SUFFIX,izhikang.com,ChinaProxy
 DOMAIN-SUFFIX,izhiyiwang.com,ChinaProxy
 DOMAIN-SUFFIX,izhuanfa.com,ChinaProxy
@@ -24009,6 +24036,7 @@ DOMAIN-SUFFIX,jgzyw.com,ChinaProxy
 DOMAIN-SUFFIX,jhcb.net,ChinaProxy
 DOMAIN-SUFFIX,jhdxwl.com,ChinaProxy
 DOMAIN-SUFFIX,jhfgtyjh.com,ChinaProxy
+DOMAIN-SUFFIX,jhgtgb.com,ChinaProxy
 DOMAIN-SUFFIX,jhgy.cc,ChinaProxy
 DOMAIN-SUFFIX,jhhunli.net,ChinaProxy
 DOMAIN-SUFFIX,jhjcjj.com,ChinaProxy
@@ -24156,6 +24184,7 @@ DOMAIN-SUFFIX,jiaotanqihuo.com,ChinaProxy
 DOMAIN-SUFFIX,jiaotongjie.com,ChinaProxy
 DOMAIN-SUFFIX,jiaotss.com,ChinaProxy
 DOMAIN-SUFFIX,jiaoyin.com,ChinaProxy
+DOMAIN-SUFFIX,jiaoyitu.com,ChinaProxy
 DOMAIN-SUFFIX,jiaoyoudns.com,ChinaProxy
 DOMAIN-SUFFIX,jiaoyudao.com,ChinaProxy
 DOMAIN-SUFFIX,jiaoyuwo.com,ChinaProxy
@@ -25829,6 +25858,7 @@ DOMAIN-SUFFIX,ktpme.com,ChinaProxy
 DOMAIN-SUFFIX,ktunions.com,ChinaProxy
 DOMAIN-SUFFIX,ktvc8.com,ChinaProxy
 DOMAIN-SUFFIX,ktvk.net,ChinaProxy
+DOMAIN-SUFFIX,ktvme.com,ChinaProxy
 DOMAIN-SUFFIX,ktxuexi.com,ChinaProxy
 DOMAIN-SUFFIX,yu.com,ChinaProxy
 DOMAIN-SUFFIX,ku25.com,ChinaProxy
@@ -25959,6 +25989,7 @@ DOMAIN-SUFFIX,kulengvps.com,ChinaProxy
 DOMAIN-SUFFIX,kulianw.com,ChinaProxy
 DOMAIN-SUFFIX,kuliqiang.com,ChinaProxy
 DOMAIN-SUFFIX,kuman.com,ChinaProxy
+DOMAIN-SUFFIX,kumanjujia.com,ChinaProxy
 DOMAIN-SUFFIX,kumao5.com,ChinaProxy
 DOMAIN-SUFFIX,kumaoyun.com,ChinaProxy
 DOMAIN-SUFFIX,kumi5.com,ChinaProxy
@@ -26778,6 +26809,7 @@ DOMAIN-SUFFIX,linghaoxian.com,ChinaProxy
 DOMAIN-SUFFIX,linghit.com,ChinaProxy
 DOMAIN-SUFFIX,lingkaba.com,ChinaProxy
 DOMAIN-SUFFIX,lingla.com,ChinaProxy
+DOMAIN-SUFFIX,linglingkaimen.com,ChinaProxy
 DOMAIN-SUFFIX,linglongart.com,ChinaProxy
 DOMAIN-SUFFIX,lingmihaitao.com,ChinaProxy
 DOMAIN-SUFFIX,lingmovie.com,ChinaProxy
@@ -27257,6 +27289,7 @@ DOMAIN-SUFFIX,loyo.cc,ChinaProxy
 DOMAIN-SUFFIX,lpcheng.com,ChinaProxy
 DOMAIN-SUFFIX,lpdns.com,ChinaProxy
 DOMAIN-SUFFIX,lpllol.com,ChinaProxy
+DOMAIN-SUFFIX,lppz.com,ChinaProxy
 DOMAIN-SUFFIX,lpswz.com,ChinaProxy
 DOMAIN-SUFFIX,lptiyu.com,ChinaProxy
 DOMAIN-SUFFIX,lpxt.com,ChinaProxy
@@ -28690,6 +28723,7 @@ DOMAIN-SUFFIX,molixiangce.com,ChinaProxy
 DOMAIN-SUFFIX,molizm.com,ChinaProxy
 DOMAIN-SUFFIX,moloong.com,ChinaProxy
 DOMAIN-SUFFIX,moltentec.com,ChinaProxy
+DOMAIN-SUFFIX,molujie.com,ChinaProxy
 DOMAIN-SUFFIX,momentcdn.net,ChinaProxy
 DOMAIN-SUFFIX,momhui.com,ChinaProxy
 DOMAIN-SUFFIX,momo.moda,ChinaProxy
@@ -29262,6 +29296,7 @@ DOMAIN-SUFFIX,nbbike.net,ChinaProxy
 DOMAIN-SUFFIX,nbcyl.com,ChinaProxy
 DOMAIN-SUFFIX,nbdeli.com,ChinaProxy
 DOMAIN-SUFFIX,nbdpx.com,ChinaProxy
+DOMAIN-SUFFIX,nbegame.com,ChinaProxy
 DOMAIN-SUFFIX,nbegame.net,ChinaProxy
 DOMAIN-SUFFIX,nbfce.com,ChinaProxy
 DOMAIN-SUFFIX,nbgdjt.com,ChinaProxy
@@ -29479,6 +29514,7 @@ DOMAIN-SUFFIX,nic.ren,ChinaProxy
 DOMAIN-SUFFIX,nic.wang,ChinaProxy
 DOMAIN-SUFFIX,nicaifu.com,ChinaProxy
 DOMAIN-SUFFIX,app.com,ChinaProxy
+DOMAIN-SUFFIX,nice3c.com,ChinaProxy
 DOMAIN-SUFFIX,nicecdn.com,ChinaProxy
 DOMAIN-SUFFIX,niceimg.net,ChinaProxy
 DOMAIN-SUFFIX,niceloo.com,ChinaProxy
@@ -29662,6 +29698,7 @@ DOMAIN-SUFFIX,nordicways.com,ChinaProxy
 DOMAIN-SUFFIX,normteam.com,ChinaProxy
 DOMAIN-SUFFIX,normtm.com,ChinaProxy
 DOMAIN-SUFFIX,plus.net,ChinaProxy
+DOMAIN-SUFFIX,northgun.com,ChinaProxy
 DOMAIN-SUFFIX,northidc.net,ChinaProxy
 DOMAIN-SUFFIX,northpu.com,ChinaProxy
 DOMAIN-SUFFIX,northtimes.com,ChinaProxy
@@ -30420,6 +30457,7 @@ DOMAIN-SUFFIX,pdfwang.com,ChinaProxy
 DOMAIN-SUFFIX,pdhero.com,ChinaProxy
 DOMAIN-SUFFIX,pdim.gs,ChinaProxy
 DOMAIN-SUFFIX,pdkp.org,ChinaProxy
+DOMAIN-SUFFIX,pdomo.me,ChinaProxy
 DOMAIN-SUFFIX,pdosgk.com,ChinaProxy
 DOMAIN-SUFFIX,pdrcfw.com,ChinaProxy
 DOMAIN-SUFFIX,pdryx.com,ChinaProxy
@@ -31979,6 +32017,7 @@ DOMAIN-SUFFIX,r1y.com,ChinaProxy
 DOMAIN-SUFFIX,r2g.net,ChinaProxy
 DOMAIN-SUFFIX,r2yx.com,ChinaProxy
 DOMAIN-SUFFIX,r4li.com,ChinaProxy
+DOMAIN-SUFFIX,r5tao.com,ChinaProxy
 DOMAIN-SUFFIX,r66r.net,ChinaProxy
 DOMAIN-SUFFIX,r900.club,ChinaProxy
 DOMAIN-SUFFIX,ra104.com,ChinaProxy
@@ -32348,6 +32387,7 @@ DOMAIN-SUFFIX,pet.com,ChinaProxy
 DOMAIN-SUFFIX,rpgsky.net,ChinaProxy
 DOMAIN-SUFFIX,rpplusplus.me,ChinaProxy
 DOMAIN-SUFFIX,rpwtcn.com,ChinaProxy
+DOMAIN-SUFFIX,rqiao.net,ChinaProxy
 DOMAIN-SUFFIX,rqyoo.com,ChinaProxy
 DOMAIN-SUFFIX,sc.com,ChinaProxy
 DOMAIN-SUFFIX,rrbt.org,ChinaProxy
@@ -33237,6 +33277,7 @@ DOMAIN-SUFFIX,shixiu.net,ChinaProxy
 DOMAIN-SUFFIX,shixiu.org,ChinaProxy
 DOMAIN-SUFFIX,shixunwang.net,ChinaProxy
 DOMAIN-SUFFIX,shiyan.cc,ChinaProxy
+DOMAIN-SUFFIX,shiyanbar.com,ChinaProxy
 DOMAIN-SUFFIX,shiyanlou.com,ChinaProxy
 DOMAIN-SUFFIX,shiyanqiao.com,ChinaProxy
 DOMAIN-SUFFIX,shiye.org,ChinaProxy
@@ -33452,6 +33493,7 @@ DOMAIN-SUFFIX,shuicao.cc,ChinaProxy
 DOMAIN-SUFFIX,shuichan.cc,ChinaProxy
 DOMAIN-SUFFIX,shuichan51.com,ChinaProxy
 DOMAIN-SUFFIX,shuichanyangzhi.com,ChinaProxy
+DOMAIN-SUFFIX,shuidichou.com,ChinaProxy
 DOMAIN-SUFFIX,shuidihuzhu.com,ChinaProxy
 DOMAIN-SUFFIX,shuidishuju.com,ChinaProxy
 DOMAIN-SUFFIX,shuiguo.com,ChinaProxy
@@ -33627,6 +33669,7 @@ DOMAIN-SUFFIX,sinahk.net,ChinaProxy
 DOMAIN-SUFFIX,sinaimg.com,ChinaProxy
 DOMAIN-SUFFIX,sinajs.com,ChinaProxy
 DOMAIN-SUFFIX,sinanet.com,ChinaProxy
+DOMAIN-SUFFIX,sinasinasinasina.com,ChinaProxy
 DOMAIN-SUFFIX,sinastorage.com,ChinaProxy
 DOMAIN-SUFFIX,sinauda.com,ChinaProxy
 DOMAIN-SUFFIX,sinayou.com,ChinaProxy
@@ -33845,6 +33888,7 @@ DOMAIN-SUFFIX,smebb.com,ChinaProxy
 DOMAIN-SUFFIX,smejs.com,ChinaProxy
 DOMAIN-SUFFIX,smemo.info,ChinaProxy
 DOMAIN-SUFFIX,smeoa.com,ChinaProxy
+DOMAIN-SUFFIX,smfyun.com,ChinaProxy
 DOMAIN-SUFFIX,smggw.com,ChinaProxy
 DOMAIN-SUFFIX,smgstar.com,ChinaProxy
 DOMAIN-SUFFIX,smh5511.com,ChinaProxy
@@ -35482,6 +35526,7 @@ DOMAIN-SUFFIX,tjbh.com,ChinaProxy
 DOMAIN-SUFFIX,tjculture.com,ChinaProxy
 DOMAIN-SUFFIX,tjdljy.net,ChinaProxy
 DOMAIN-SUFFIX,tjdtdd.com,ChinaProxy
+DOMAIN-SUFFIX,tjfer.com,ChinaProxy
 DOMAIN-SUFFIX,tjfxb.com,ChinaProxy
 DOMAIN-SUFFIX,tjgbzx.com,ChinaProxy
 DOMAIN-SUFFIX,tjj.com,ChinaProxy
@@ -35829,6 +35874,7 @@ DOMAIN-SUFFIX,event.com,ChinaProxy
 DOMAIN-SUFFIX,juheng.com,ChinaProxy
 DOMAIN-SUFFIX,ts100.com,ChinaProxy
 DOMAIN-SUFFIX,ts13.com,ChinaProxy
+DOMAIN-SUFFIX,ts133.com,ChinaProxy
 DOMAIN-SUFFIX,ts168.net,ChinaProxy
 DOMAIN-SUFFIX,ts1889.com,ChinaProxy
 DOMAIN-SUFFIX,ts95.com,ChinaProxy
@@ -37306,6 +37352,7 @@ DOMAIN-SUFFIX,wantiku.com,ChinaProxy
 DOMAIN-SUFFIX,wantqb.ren,ChinaProxy
 DOMAIN-SUFFIX,nj.com,ChinaProxy
 DOMAIN-SUFFIX,wantv.me,ChinaProxy
+DOMAIN-SUFFIX,wanvv.com,ChinaProxy
 DOMAIN-SUFFIX,wanwanol.com,ChinaProxy
 DOMAIN-SUFFIX,wanweipc.com,ChinaProxy
 DOMAIN-SUFFIX,wanwushuo.com,ChinaProxy
@@ -38345,6 +38392,7 @@ DOMAIN-SUFFIX,wtsw.net,ChinaProxy
 DOMAIN-SUFFIX,wtszx.com,ChinaProxy
 DOMAIN-SUFFIX,wtzw.com,ChinaProxy
 DOMAIN-SUFFIX,wu369.com,ChinaProxy
+DOMAIN-SUFFIX,wu37.com,ChinaProxy
 DOMAIN-SUFFIX,wuaik.com,ChinaProxy
 DOMAIN-SUFFIX,wuaiso.com,ChinaProxy
 DOMAIN-SUFFIX,wubaiyi.com,ChinaProxy
@@ -38766,6 +38814,7 @@ DOMAIN-SUFFIX,xgd666.com,ChinaProxy
 DOMAIN-SUFFIX,xgdq.com,ChinaProxy
 DOMAIN-SUFFIX,xgfz.net,ChinaProxy
 DOMAIN-SUFFIX,xgimi.com,ChinaProxy
+DOMAIN-SUFFIX,xgkwx.com,ChinaProxy
 DOMAIN-SUFFIX,xglove.com,ChinaProxy
 DOMAIN-SUFFIX,xgnwp.com,ChinaProxy
 DOMAIN-SUFFIX,xgqq.com,ChinaProxy
@@ -38924,6 +38973,7 @@ DOMAIN-SUFFIX,xiaogushi.com,ChinaProxy
 DOMAIN-SUFFIX,xiaohb.com,ChinaProxy
 DOMAIN-SUFFIX,xiaohei.com,ChinaProxy
 DOMAIN-SUFFIX,xiaoheima.com,ChinaProxy
+DOMAIN-SUFFIX,xiaohengji.com,ChinaProxy
 DOMAIN-SUFFIX,xiaohongshu.com,ChinaProxy
 DOMAIN-SUFFIX,xiaohua860.com,ChinaProxy
 DOMAIN-SUFFIX,xiaohuangji.com,ChinaProxy
@@ -42270,6 +42320,7 @@ DOMAIN-SUFFIX,zhuiqu.com,ChinaProxy
 DOMAIN-SUFFIX,zhuishushenqi.com,ChinaProxy
 DOMAIN-SUFFIX,zhuixingwang.com,ChinaProxy
 DOMAIN-SUFFIX,zhuixue.net,ChinaProxy
+DOMAIN-SUFFIX,zhuiying.me,ChinaProxy
 DOMAIN-SUFFIX,zhuizhuiimg.com,ChinaProxy
 DOMAIN-SUFFIX,zhuizhuiyoyo.com,ChinaProxy
 DOMAIN-SUFFIX,zhuji.com,ChinaProxy
@@ -42528,6 +42579,7 @@ DOMAIN-SUFFIX,zmobuy.com,ChinaProxy
 DOMAIN-SUFFIX,zmqlh.com,ChinaProxy
 DOMAIN-SUFFIX,zmrgame.com,ChinaProxy
 DOMAIN-SUFFIX,zmsc.cc,ChinaProxy
+DOMAIN-SUFFIX,zmt.me,ChinaProxy
 DOMAIN-SUFFIX,zmtiantang.com,ChinaProxy
 DOMAIN-SUFFIX,zmumu.com,ChinaProxy
 DOMAIN-SUFFIX,zmxiu.com,ChinaProxy
